Making it secure, implemented a Diffie-Hellman handshake and initialized a chacha20 cipher, though the encapsulation does not necessarily comply to the TLS standard. Program is non functional at this point, no actual encryption of data is taking place and things are in limbo, I am just done for today. The OpenSSL dependency is going to be a headache for people who want to compile from source, but it is a lot easier and safer than trying to rewrite crypto functions from scratch.

--- a/xfer.vcxproj.filters
+++ b/xfer.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="socketStreamBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FileTransferReceiver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="secureSocketStream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SocketStreamBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="secureSocketStream.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
