Big update, windows 64 bit version works in prelim testing. Log files in dest dir, file conflict renaming, more output options

--- a/xfer.vcxproj
+++ b/xfer.vcxproj
@@ -75,8 +75,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)..\openssl\include;$(IncludePath)</IncludePath>
-    <LibraryPath>$(SolutionDir)..\openssl\bin\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\openssl-64\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)..\openssl-64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -116,7 +116,9 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>libcrypto.lib;libssl.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libcrypto_static.lib;libssl_static.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries>MSVCRT.lib</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -160,14 +162,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="FileTransferReceiver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="secureSocketStream.cpp" />
-    <ClCompile Include="socketStreamBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="secureSocketStream.h" />
-    <ClInclude Include="SocketStreamBuffer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
